<resources>
    <string name="app_name">SC-RP Launcher</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rule_play">
        رول پلی ( RolePlay ) در اصطلاح یعنی نقش آفرینی و ایفای نقش … حالا چه ربطی به بازی GTA داره ؟! یعنی وقتی وارد بازی میشید از ابتدا باید کاراکتر و شخصیت خودتون رو بسازید و وارد یک زندگی مجازی بشید، در این زندگی شما به مانند زندگی واقعی حق انجام کار های غیرعقلانی را ندارید به طور مثال وقتی شما درون بازی با سرعت زیاد به دیواری برخورد میکنید و ماشین آتیش میگیرد حق ندارید از ماشین در بیاید چرا، چون در اون لحظه شما به شدت اسیب دیده اید و توان حرکت ندارید و اگر فرار کنید یک کار غیر عقلانی کردید و مجازات خواهی شد.
        \n
        امروزه بازی های زیادی در سبک رول پلی در حال عرضه هست ولی تعداد کمی از این بازی ها مناسب گوشی هم هست، SA_MP یک بازی در سبک رول پلی است که به روی سیستم های ضعیف کامپیوتر و گوشی نیز قابل اجرا است.
        \n
        شما وقتی وارد بازی میشوید باید طبق قوانین شهر پیش بروید و از دزدی و خشونت پرهیز کنید در غیر اینصورت با مامور های پلیس مواجه خواهی شد.
    </string>

    <string name="title_rule_play">قوانین سرور آرپی (RP)</string>
    <string name="title_rule_public">قوانین عمومی سان سیتی رول پلی</string>
    <string name="rule_play_notification">
💠 RP(Role Play) : زندگی در دنیای مجازی مانند دنیای واقعی
        \n
➖➖➖➖➖➖➖➖
        \n
💠IC: اطلاعات مرتبط با زندگی فرد در گیم که درون بازی رد و بدل میشود
\n
💠ooc: اطلاعات غیر مربوط با زندگی فرد در گیم که در بازی رد و بدل میشود
        \n
➖➖➖➖➖➖➖➖
        \n
💠GZ: مناطق عمومی و محافظت شده.
\n
💠AFK:  خارج شدن از بازی موقت یا مشاهده نقشه بازی
        \n
➖➖➖➖➖➖➖➖
        \n
💠 D M(Death Match): کشتن بدون دلیل
        \n
➖➖➖➖➖➖➖➖
        \n
💠 DB (Drive By): کشتن پلیرا با ماشین
        \n
➖➖➖➖➖➖➖➖
        \n
💠 TK(Team Kill) : کشتن هم تیمی ها
        \n
➖➖➖➖➖➖➖➖
        \n
💠 SK(Spawn Kill) : فردی رو در محل اسپاون پشت سر هم بکشید
        \n
➖➖➖➖➖➖➖➖
        \n
💠 OSK : فحش به خانواده و خواهر و مادر وغیره
        \n
➖➖➖➖➖➖➖➖
        \n
💠 GM(God Mode): حالت خدا (چیت)
        \n
➖➖➖➖➖➖➖➖
        \n
💠 MG(Meta Gaming) : متا گیمینگ
\n
ℹ️ توضیح : استفاده از هرگونه اطلاعات خارج سرور به عنوان مثال : شخصی در حال خفت شدن است و در تیم اسپیک یا دیسکورد از پلیس یا دوست خود درخواست کمک می کند یا در چت فکشن یا فمیلی درخواست کمک کند
و یا مثلا صدا زدن شخصی با ID که بالای سر آن فرد داده می شود باید اسم فرد رو صدا بزنید
        \n
➖➖➖➖➖➖➖➖
        \n
💠 PG(Power Gaming) : پاور گیمینگ
        \n
ℹ️ توضیح : استفاده از چیت و یا مود هایی که قابلیت ویژه ای بدهد که در سرور نیست و تو زندگی واقعی وجود نداره مثل ( چیت )
        \n
➖➖➖➖➖➖➖➖
        \n
💠 ZZ : (امن) کشتن در مکان عمومی
        \n
ℹ️ توضیح : مناطقی که مرتکب شدن به هر گونه جرمی در آن ممنوع است
نافرمانی از دستورات و مقاومت در برابر مأموران دولتی ( حمله با سلاح سرد ، سلاح گرم ، مشت زدن و... )در این مناطق ممنوع است اما اگر شرایط فرار را داشته باشید می توانید فرار کنید.
        \n
➖➖➖➖➖➖➖➖
        \n
💠 NLR(New Life Respawn) : نیولایف
        \n
ℹ️ توضیح : نیو لایف زمانی اتفاق می افتد که شما از بیمارستان ری اسپاون می شوید بر اساس این قانون شخصی که فوت شده بعد از ری اسپاون حافظه خود را از دست داده و افراد و اتفاقاتی که قبل از مردن برایش اتفاق افتاده را به یاد نمیاورد و تا 30 دقیقه حق برگشتن به محل مرگش و یا انجام کاری که قرار بود انجام بده یا درحال انجام بود را ندارد
        \n
➖➖➖➖➖➖➖➖
        \n
💠 FRP(Fear Roleplay) : نقش آفرینی ترس
        \n
ℹ️ توضیح : بر اساس این قانون جان شما برایتان با ارزش است و نباید کاری کنید که جانتان را تهدید می کند
        \n
مثال : زمانی که شما پیاده و یا سوار موتور هستید و اسلحه از نزدیک به سمت شما هدف گرفته شده، حق فرار یا در آوردن اسلحه را ندارید و نمی توانید از کسی کمک بگیرید
        \n
➖➖➖➖➖➖➖➖
        \n
💠 MK(Mercy Killing) : کشتن خود از عمد
        \n
ℹ️ توضیح : درخواست مرگ از کسی یا پرت کردن خود برای فرار از دست پلیس یا موقعی که خونتون خیلی کمه
        \n
به عنوان مثال در سارقت بانک هستید و خونتون کمه و از دوستتان میخواهید که شمارو کیل کنه که قانون نقص میشه و اگه همون لحظه برگردید به سرقت و کمک کنید قانون NLR هم نقص کردید
- پریدن های متوالی در هنگام تیرخوردن Non RP محسوب میشه
    </string>

    <string name="rule_public">
💠خرید و فروش اموال (اسکین،پول گیم،ماشین و خانواده.....) در خارج از گیم ممنوع میباشد.
        \n
⛔️در صورت مشاهده فرد فروشنده از بازی در سرور محروم و شخص خریدار اموالش توقیف و 15 روز بن میشود.
\n
💠نام بردن از سرور دیگر یا ارسال ایپی سرور دیگر ممنوع میباشد.
\n
⛔در صورت نام بردن از سرور دیگر 120 دقیقه میوت میشوید.
\n
⛔در صورت ارسال ایپی سرور دیگر 10 روز بن میشوید.
\n
 💠هرگونه توهین به فرد دیگر و یا توهین به سرور ممنوع میباشد و در صورت مشاهده مجازات میشوید.
\n
💠هرگونه کلاهبرداری در معاملات درون گیم ممنوع میباشد.
\n
⛔فرد کلاهبردار اموال دزدیده شده مصادره میشود و 15 روز از بازی در سرور محروم میشود.
\n
💠استفاده از فایل های تقلب ممنوع میباشد.
\n
💠سوع استفاده از جایگاه خود ( لیدر،پلیر فکشن،ادمین و...)ممنوع میباشد.
\n
⛔در صورت مشاهده پلیر از جایگاه خود عزل و به مدت 60 روز در بلک لیست تمامی فکشن ها قرار میگیرد.
\n
⛔ادمین در صورت سوع استفاده از جایگاه خود 30 روز بن میشود.
    </string>
    <string name="update">در دست ساخت</string>
    <string name="notification">اعلانات</string>
    <string name="dashboard">صفحه اصلی</string>
    <string name="login">ورود</string>
    <string name="about">درباره ما</string>
    <string name="close">بستن</string>
    <string name="telegram"><a href="https://t.me/suncityroleplay">https://t.me/suncityroleplay</a></string>
    <string name="webSite"><a href="https://suncity-rp.top/">https://suncity-rp.top/</a></string>
    <string name="tel_channel">کانال تلگرامی ما:</string>
    <string name="web_site">وب سایت:</string>
    <string name="version">نسخه:</string>
    <string name="about_content">بازی جی تی ای سن اندرس را آنلاین روی کامپیوتر و یا موبایل هوشمند خود بازی کنید</string>
    <string name="about_rule_play">معرفی رول پلی</string>
    <string name="data_download">دانلود دیتا</string>
    <string name="insert_account_name">اسم اکانت خود را وارد کنید</string>
    <string name="start_game">شروع بازی</string>
    <string name="permission_deny">برای کار با برنامه حتما باید همه دسترسی ها داده شود</string>
    <string name="found_data">دیتا یافت شد</string>
    <string name="download_error">خطا در دانلود فایل</string>
    <string name="cancel">انصراف</string>
    <string name="loading">در حال استخراج فایل ها...</string>
    <string name="zun_zip_error">خطا در انجام عملیات</string>
    <string name="permission_not_granted">برای نصب بازی باید مجوز داده شود.</string>
    <string name="username_empty">نام کاربری نمیتواند خالی باشد</string>
    <string name="username_replace_success">عملیات با موفقیت انجام شد</string>

</resources>