<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/dashboard_img"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:layout_marginHorizontal="16dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtVersion"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:padding="8dp"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:padding="8dp"
                android:text="@string/version"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:padding="8dp"
            android:text="@string/about_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:layout_marginHorizontal="16dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:padding="8dp"
                android:autoLink="web"
                android:text="@string/telegram"
                android:linksClickable="true"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:padding="8dp"
                android:text="@string/tel_channel"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:layout_marginHorizontal="16dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:padding="8dp"
                android:text="@string/webSite"
                android:autoLink="web"
                android:linksClickable="true"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:padding="8dp"
                android:text="@string/web_site"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</layout>
