<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/dashboard_img"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRulePlay"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                app:backgroundTint="@null"
                android:text="@string/about_rule_play"
                android:background="@drawable/btn_gradient_shape"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDownloadData"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                app:backgroundTint="@null"
                android:text="@string/data_download"
                android:background="@drawable/btn_gradient_shape"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:background="@drawable/btn_gradient_shape"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeColor="@null"
                app:hintEnabled="false"
                android:layout_marginHorizontal="16dp"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:hint="@string/insert_account_name"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnStartGame"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                app:backgroundTint="@null"
                android:text="@string/start_game"
                android:background="@drawable/btn_gradient_shape"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>


</layout>